# 42_webserv

./: .gitignore  CHANGELOG.md  FAQ.md  Makefile  README.md  TODO.md
.github/workflows/: github-actions-gtest.yml
cgi/: comments.json
cgi/script/: guestbook.py  newcomment.py  print_ls_la.sh  query.pl  reply.py  welcome.pl
conf/: autoindex.conf  cgi.conf  error_template  example.conf  hostservers.conf  jvacaris.conf  methods.conf  redirect.conf
gTest/: CMakeLists.txt  post_gTest.sh  pre_gTest.sh
gTest/test/: utils.cc
gTest/test/conf/: Filetypes.cc  conf.cc
gTest/test/network/server/: AServerTest.cc
gTest/test/network/socket/: ASocketTest.cc  BindSocketTest.cc  ConnectSocketTest.cc  ListenSocketTest.cc
scripts/: cpp_gen.sh  fix_headers.sh
src/: Filetypes.cpp  Filetypes.hpp  general.hpp  main.cpp  request_header_parsing.cpp  request_header_parsing.hpp  to_string.cpp  utils.cpp
src/actuators/: cgi.cpp  cgi.hpp  get.cpp  methods.hpp
src/conf/: Filetypes.cpp  Filetypes.hpp  conf.cpp  conf.hpp  disableExceptions.sh  enableExceptions.sh  location.cpp  location.hpp  server_configuration.cpp  server_configuration.hpp  serverconf.cpp  serverconf.hpp
src/network/: NOTES.md  cached_response.hpp  listen_sockets.cpp  listen_sockets.hpp  server.cpp  server.hpp
src/network/server/: AServer.cpp  AServer.hpp  PollServer.cpp  PollServer.hpp  SelectServer.cpp  SelectServer.hpp  TestServer.cpp  TestServer.hpp  fdlibc-server.hpp
src/network/socket/: ASocket.cpp  ASocket.hpp  BindSocket.cpp  BindSocket.hpp  ConnectSocket.cpp  ConnectSocket.hpp  ListenSocket.cpp  ListenSocket.hpp
src/parsing/: request_header_parsing.cpp  request_header_parsing.hpp
src/requests/: Request.cpp  Request.hpp
src/responses/: Directories.cpp  Filetypes.cpp  Filetypes.hpp  Response.cpp  Response.hpp  responses.cpp  responses.hpp
src/sandbox/: cards.html  fdlibc-network.hpp  guestbook.html
src/sandbox/cgi/: mainls.cpp  mainpy.cpp
src/sandbox/post/: newmessage.html
src/sandbox/server/: AServer.cpp  AServer.hpp  PollServer.cpp  PollServer.hpp  SelectServer.cpp  SelectServer.hpp  TestServer.cpp  TestServer.hpp  fdlibc-server.hpp
src/sandbox/socket/: ASocket.cpp  ASocket.hpp  BindSocket.cpp  BindSocket.hpp  ListenSocket.cpp  (+4 more)
src/utils/: log.hpp
test_files/: forbidden_file.txt  form_upload.html  get_request  get_request_dir  index.html  post_request  reply.py  sample_page.html
test_files/cgi/: FAQ.md  guestbook.py  newcomment.py  newmessage.html  show_env.wexec
test_files/sample_webpage/: sample_page.html
(+2 files in other folders)
